@@ -43,7 +43,9 @@ jpackage \
   --main-jar "dq-tool-${APP_VERSION}.jar" \
   --main-class com.example.dq.DqApplication \
   --java-options '-Ddq.data-dir=${user.home}/.dq-tool/data' \
-  --java-options '-XX:+UseZGC' \
+  --java-options '-XX:+UseG1GC' \
+  --java-options '-Xmx384m' \
+  --java-options '-XX:MaxRAMPercentage=50' \
   --java-options '-Djava.awt.headless=false' \
   --java-options '-Dapple.awt.UIElement=true' \
   --java-options '-splash:${APPDIR}/splash.png' \
